--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -2,6 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 hello=hello Igor
+hello.name=hello {0}
 loginController=en loginController 
 loginController.hello=hello?
 loginController.error=error.
